tests/files/type_checker_tests/should_pass/119.cmdr
//Test that greater than or equal operation type checks
x = "hi" >= "there";
