tests/files/type_checker_tests/should_fail/029.cmdr
//Should fail on greater equal when types are incompatible
x = 3 >= "3";